# Noctis

./: .env.example  .gitignore  695.pptx  EXTRACTION_CONTRACT.md  README.md  alembic.ini  alignment_policy.yaml  database_schema.json  database_schema.yaml  docker-compose.yml  feature_manifest.yaml  main.py  mock_api_server.py  pyproject.toml  qc_policy.yaml  railway.toml  railway.web.toml  requirements.txt  schema_manifest.json
.github/workflows/: ci.yml
Documentation/: Noctis_Presentation_BG.md  README.md  Приложение 1.docx  Приложение_1_Noctis.md
Hardware/: HARDWARE.md  Parametric_Enclosure_v1.f3d  Parametric_Enclosure_v1.stl  Parametric_Enclosure_v2.f3d  Parametric_Enclosure_v2.stl  extract_flash_data.py  sleep_data.csv
Hardware/FlashDataExtractor/: FlashDataExtractor.ino
Hardware/data_extraction/: data_extraction.ino
Hardware/secondSleepCode/: WIFI_COMMANDS.md  api_client.cpp  api_client.h  rgb_led.cpp  rgb_led.h  secondSleepCode.ino  types.h  wifi_manager.cpp  wifi_manager.h
alembic/: env.py
alembic/versions/: 20260211_0001_init.py  20260211_0002_monitoring.py  20260211_0003_feature_stats_daily.py  20260211_0004_ml_lifecycle.py  (+11 more)
app/: __init__.py  main.py
apps/py-ml-api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/py-ml-api/alembic/: env.py
apps/py-ml-api/alembic/versions/: 88350bd75993_0001_extensions.py  88350bd75993_create_sensor_samples.py
apps/py-ml-api/src/db/models/: __init__.py  base.py  device.py  device_metrics.py  enums.py  epoch_features_30s.py  epoch_label_30s.py  epoch_prediction_30s.py  model_run.py  recording.py  sensor_samples.py
apps/py-ml-api/src/noctis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: training_prod_cnn_bilstm.yaml
docker/: Dockerfile  Dockerfile.web  entrypoint.sh  gunicorn.conf.py  nginx-entrypoint.sh  nginx.conf
dreem_extractor/: README.md  SPEC.md  __init__.py  constants.py  models.py  pipeline.py
edf_extractor/: __init__.py  constants.py  models.py  pipeline.py
extractor/: __init__.py  cli.py  config.py  epoching.py  extract.py  h5io.py  hypnogram.py
extractor_hardened/: __init__.py  alignment.py  artifacts.py  contracts.py  errors.py  manifest.py  night_summary.py  qc.py  validator.py
infra/: compose.yaml
scripts/: add-device  docker-up.sh  evaluate_model_artifact.py  extract_all_datasets.py  ingest_dodh.py  load_test.py  mock_device_ingest.py  mock_frontdata.py  register_device.py  run_inference_dodh.py  validate_contract_schemas.py  validate_extraction_artifact.py  verify_dataset_split_integrity.py
tests/: test_alignment.py  test_ecg_hr_smoke.py  test_feature_schema.py  test_stage_mapping.py
(+611 files in other folders)
