[project]
name = "noctis"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "psycopg>=3.3.2",
    "sqlalchemy>=2.0.46",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
